[gd_scene load_steps=2 format=3 uid="uid://d0qll18lorysv"]

[ext_resource type="Script" path="res://status_effect_instance.gd" id="1_e3jdb"]

[node name="Status Effect Instance" type="Node"]
script = ExtResource("1_e3jdb")

[node name="End_Time" type="Timer" parent="."]
one_shot = true

[node name="Ping_Time" type="Timer" parent="."]

[connection signal="timeout" from="End_Time" to="." method="_on_end_time_timeout"]
[connection signal="timeout" from="Ping_Time" to="." method="_on_ping_time_timeout"]
